--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
-  "name": "Odin",
-  "version": "1.3.3"
+  "name": "odin",
+  "version": "1.3.4",
+  "config": {
+    "posts_per_page": 999
+  }
 }
