--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "odin",
-  "version": "1.3.4",
+  "version": "2.0.0",
+  "author": {
+    "name": "Christopher Demicoli",
+    "email": "christopher.demicoli@outlook.com"
+  },
   "config": {
     "posts_per_page": 999
   }
